--- a/Contact Us/contact_us.html
+++ b/Contact Us/contact_us.html
@@ -16,11 +16,17 @@
 
     <!-- Adding navigation bar items -->
     <div class="topnav">
-        <nav class="navbar navbar-default navbar-expand-sm nav-fill w-100">
+        <nav class="navbar navbar-default navbar-expand-sm shadow nav-fill w-100">
+            <!-- <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                <img style="max-width:50px; margin-top: -7px;" src="/Images/logo.jpg">
+            </a> -->
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">About Us</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Contact Us</a></li>
+                <li>
+                    <a href="#"><img id="logo-navbar-middle" src="/Images/alexius-logo-no.png" alt="Logo Thing main logo"></a>
+                </li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Login</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Sign Up</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Write a Review</a></li>
@@ -32,6 +38,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <img id="slogan-logo" src="/Images/alexius-slogan.png">
     <div class="container contact-form">
         <form>
             <div class="row">
