User profile and Navbar
Started with user profile page. Navbar complete and added in both 'Contact Us' page and 'User Profile' page

--- a/Contact Us/contact_us.html
+++ b/Contact Us/contact_us.html
@@ -24,8 +24,9 @@
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Home</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">About Us</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Contact Us</a></li>
+                <!-- <li><img id="logo-navbar-middle" src="/Images/alexius-logo-no.png"></li> -->
                 <li>
-                    <a href="#"><img id="logo-navbar-middle" src="/Images/alexius-logo-no.png" alt="Logo Thing main logo"></a>
+                    <a href="#"><img id="logo-navbar-middle" src="Images/alexius-logo-no.png"></a>
                 </li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Login</a></li>
                 <li class="nav-item"><a class="hoverable nav-link" href="#">Sign Up</a></li>
@@ -33,12 +34,41 @@
             </ul>
         </nav>
     </div>
+    <img id="logo" src="Images/logo-no.png">
+
+    <!-- Display message for contact page -->
+    <p class="message" id="content_0">
+        We'd love to hear from you
+    </p>
+    <p class="message" id="content_1">
+        Alexius is here to provide you with more information or answer any questions you may have <br/> Feel free to call us, send us an Email or fill out the form below and we'll get back to you ASAP.
+    </p>
+
+
+    <!-- Alternative contact details for contact page -->
+    <p id="heading">
+        Alternative Contact Details
+    </p>
+    <hr class="lines" id="line1" />
+    <p class="contact" id="contact_1">
+        Name: Ashish Ramayee Asokan <br/>Phone No: 1234567890 <br/>Email ID: raashish020@gmail.com
+    </p>
+    <hr class="lines" id="line2" />
+    <p class="contact" id="contact_2">
+        Name: Nidarshan Kumar <br/>Phone No: 1234567890 <br/>Email ID: suryanidarshan@gmail.com
+    </p>
+    <hr class="lines" id="line3" />
+    <p class="contact" id="contact_3">
+        Name: Anirudh Ragam <br/>Phone No: 1234567890 <br/>Email ID: anirudhragam@gmail.com
+    </p>
+    <hr class="lines" id="line4" />
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <img id="slogan-logo" src="/Images/alexius-slogan.png">
+    <!-- <img id="slogan-logo" src="/Images/alexius-slogan.png"> -->
     <div class="container contact-form">
         <form>
             <div class="row">
@@ -51,9 +81,8 @@
                         <textarea name="message" class="text-control" id="message" placeholder="Enter your message here"></textarea>
                     </div>
                 </div>
-            </div>
         </form>
-    </div>
+        </div>
 </body>
 
 </html>
